Three fixes;

- bug #1307; copy full scene didn't update links in constraints
  (was an oldie bug!)
- also fixed same for Hooks, which even't didn't duplicate yet
- HOME in outliner (show hierarchy) now only does current scene